feat: add babelrc to fix import error, delete global css styles, delete initial page, starter

--- a/saas-translation-message-app/tsconfig.json
+++ b/saas-translation-message-app/tsconfig.json
@@ -19,7 +19,8 @@
       }
     ],
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "@logos/*": ["./images/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
