--- a/saas-translation-message-app/tsconfig.json
+++ b/saas-translation-message-app/tsconfig.json
@@ -20,7 +20,7 @@
     ],
     "paths": {
       "@/*": ["./*"],
-      "@logos/*": ["./images/*"]
+      "@logos/*": ["./images/logos/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
