--- a/saas-translation-message-app/package.json
+++ b/saas-translation-message-app/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.0",
     "lucide-react": "^0.307.0",
     "next": "14.0.4",
+    "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
     "node": "^21.2.0",
     "react": "^18",
