--- a/saas-translation-message-app/package.json
+++ b/saas-translation-message-app/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/firebase-adapter": "^1.0.12",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -16,6 +17,8 @@
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "firebase": "^10.7.1",
+    "firebase-admin": "^11.11.1",
     "lucide-react": "^0.307.0",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
