--- a/saas-translation-message-app/package.json
+++ b/saas-translation-message-app/package.json
@@ -28,7 +28,8 @@
     "react-dom": "^18",
     "stripe": "^14.13.0",
     "tailwind-merge": "^2.2.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@types/node": "^20",
