--- a/saas-translation-message-app/package.json
+++ b/saas-translation-message-app/package.json
@@ -31,6 +31,7 @@
     "stripe": "^14.13.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^9.0.1",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
