--- a/saas-translation-message-app/package.json
+++ b/saas-translation-message-app/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@auth/firebase-adapter": "^1.0.12",
+    "@hookform/resolvers": "^3.4.0",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
@@ -30,11 +32,13 @@
     "react": "^18",
     "react-dom": "^18",
     "react-firebase-hooks": "^5.1.1",
+    "react-hook-form": "^7.51.4",
     "react-loader-spinner": "^6.1.6",
     "stripe": "^14.13.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1",
+    "zod": "^3.23.8",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
