--- a/saas-translation-message-app/package.json
+++ b/saas-translation-message-app/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/firebase-adapter": "^1.0.12",
+    "@auth/firebase-adapter": "^1.6.0",
     "@hookform/resolvers": "^3.4.0",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -34,6 +34,7 @@
     "react-dom": "^18",
     "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.51.4",
+    "react-icons": "^5.2.1",
     "react-loader-spinner": "^6.1.6",
     "stripe": "^14.13.0",
     "tailwind-merge": "^2.2.0",
